@@ -1,5 +1,7 @@
 2007-01-09  Shawn Betts  <sabetts@vcn.bc.ca>
 
+	* core.lisp (font-exists-p): rewrite using xlib:list-font-names
+
 	* user.lisp (format-time-string): new function
 	(echo-date): call format-time-string
 
